--- a/Visualizing_distributions.Rmd
+++ b/Visualizing_distributions.Rmd
@@ -3,7 +3,7 @@ title: "Visualizing Distributions"
 author: "Liz Carey, Meghana Murthy"
 date: "5/14/2019"
 output:  
-    html_document: 
+    github_document: 
       toc: true
       toc_float: true
       theme: paper
