--- a/Visualizing_distributions.Rmd
+++ b/Visualizing_distributions.Rmd
@@ -39,49 +39,100 @@ library(gapminder) #includes dataset we'll be plotting
 A histogram is a visualization of the distribution of numerical data. It's created by "binning" or bucketing the numerical values into intervals. 
 
 ### When to use a histogram:   
-+ Check the distribution (shape) of your data and for skewness (the tendency of observations to fall more on the low end or the high end of the x-axis)
++ Check the distribution (shape) of your data  
++ Check for skewness (the tendency of observations to fall more on the low end or the high end of the x-axis)  
 + Check the data for outliers
 
 ### How is a histogram different from a bar chart? 
-+ A bar chart compares two variables while a histogram only relates one. 
-+ A bar chart plots categorical data while a histogram plots numerical binned data
-+ A bar chart can be reordered while a histogram cannot
-+ A bar chart uses the length of a bar to display value while a histogram uses the area of the bar
++ A bar chart compares two variables while **a histogram only relates one.** 
++ A bar chart plots categorical data while **a histogram plots numerical binned data**
++ A bar chart can be reordered while **a histogram cannot be reordered**
++ A bar chart uses the length of a bar to display value while **a histogram uses the area of the bar**
 
 ## Histogram shapes  
 There are various shapes that your histogram can appear
 
 ### Normal Distribution
-A bell-shaped curve. Most of the data are clustered around the center: the mode, median and mean are in the center of the curve
+A bell-shaped curve. Most of the data are clustered around the center: the median and mean are in the center of the curve. The distribution is symmetric meaning about half of the data is to the left of the mean, while the other half is to the right of the mean. The mean and median are approximately the same
 
 ```{r, warning = FALSE, message=FALSE, echo = FALSE, fig.align="center"}
 norm_dist <-as.tibble(rnorm(1000, 0, 1))
 
+norm_dist_measures_of_ct <- norm_dist %>% 
+                            summarize(mean = mean(value, na.rm = TRUE), 
+                                      median = median(value, na.rm = TRUE))
+
 ggplot(norm_dist, aes(x = value)) + 
-  geom_histogram()
+  geom_histogram() + 
+  geom_vline(data = norm_dist_measures_of_ct, aes(xintercept = mean, color ="mean"),
+             show.legend = TRUE,
+             linetype = "dashed") + 
+  geom_vline(data = norm_dist_measures_of_ct,
+             aes(xintercept = median, color = "median"),
+             linetype = "dashed", 
+             show.legend = TRUE) +
+  scale_color_manual(
+        #Title the legend
+        name = "Measures of Central Tendency", 
+        #Assign colors to the mean and median lines 
+        values = c(median = "blue", mean = "red"))
 
 ```
 
 
 ### Left skew 
-The data are clustered around a large value.  Also referred as negative skewed. 
+The data are clustered around a large value and mostly fall to the right of the mean (including the median).  It's also referred to as negative skewed. 
 
 ```{r, warning = FALSE, message=FALSE, echo = FALSE, fig.align="center"}
 left_skew <- as.tibble(log(rnorm(1000)))
+
+left_skew_measures_of_ct <- left_skew %>% 
+                            summarize(mean = mean(value, na.rm = TRUE), 
+                                      median = median(value, na.rm = TRUE))
+
+
 ggplot(left_skew, aes(x = value)) + 
-  geom_histogram()
+  geom_histogram() + 
+  geom_vline(data = left_skew_measures_of_ct, aes(xintercept = mean, color ="mean"),
+             show.legend = TRUE,
+             linetype = "dashed") + 
+  geom_vline(data = left_skew_measures_of_ct,
+             aes(xintercept = median, color = "median"),
+             linetype = "dashed", 
+             show.legend = TRUE) +
+  scale_color_manual(
+        #Title the legend
+        name = "Measures of Central Tendency", 
+        #Assign colors to the mean and median lines 
+        values = c(median = "blue", mean = "red"))
 
 ```
 
 
 ### Right skew  
-The data are clustered around a small value.  
+The data are clustered around a small value and most of the data (including the median) lie to the left of the mean. 
 
 ```{r, warning = FALSE, message=FALSE, echo = FALSE, fig.align="center"}
 right_skew <- as.tibble(rnbinom(1000, mu = 10, size = 1))
+
+right_skew_measures_of_ct <- right_skew %>% 
+                            summarize(mean = mean(value, na.rm = TRUE), 
+                                      median = median(value, na.rm = TRUE))
   
 ggplot(right_skew, aes(x = value)) + 
-  geom_histogram()
+  geom_histogram() + 
+  geom_vline(data = right_skew_measures_of_ct, aes(xintercept = mean, color ="mean"),
+             show.legend = TRUE,
+             linetype = "dashed") + 
+  geom_vline(data = right_skew_measures_of_ct,
+             aes(xintercept = median, color = "median"),
+             linetype = "dashed", 
+             show.legend = TRUE) +
+  scale_color_manual(
+        #Title the legend
+        name = "Measures of Central Tendency", 
+        #Assign colors to the mean and median lines 
+        values = c(median = "blue", mean = "red"))
 ```
 
 ### Bimodal distribution  
@@ -98,9 +149,20 @@ ggplot(bimodal_dist, aes(x = value)) +
 
 
 ### Comb distribution
-The distribution alternates between high and low peaks. A comb shape can be caused by rounding off. Common examples of rounding that create comb distributions include: rounding temperatures, height, age to the nearest whole number. 
+The distribution alternates between high and low peaks. A comb shape can be caused by rounding off. Common examples of rounding that create comb distributions include: rounding temperatures, height, age to the nearest whole number.  
 
-### Uniform distribution
+```{r, warning = FALSE, message=FALSE, echo = FALSE, fig.align="center"}
+comb_dist <- as.tibble(c(rnorm(5000, sd=.5), rep(c(-1,-0.75,-0.5,-0.25,0,0.25,0.5,0.75), 500))) 
+
+ggplot(comb_dist, aes(x = value)) + 
+  geom_histogram()
+```
+
+
+### Uniform distribution  
+
+The data is equally distributed: there are no clear peaks in the data. 
+
 ```{r, warning = FALSE, message=FALSE, echo = FALSE, fig.align="center"}
 uniform_dist <- as.tibble(runif(3000, min = 0, max = 500)) 
 
@@ -123,9 +185,11 @@ From the table, we see there are the life expectancy, population, and GDP per ca
 ```{r, warning = FALSE, message=FALSE}
 gapminder
 ```
-
+  
+  
+  
 #### What's the most common life expectancy?  
-After getting a brief overview of our dataset, now we want to know, what's the most common life expectancy?  
+After getting a brief overview of our data set, now we want to know, what's the most common life expectancy?  
 
 To answer this question, let's print the distribution of life expectancies in the data set. 
 
@@ -165,8 +229,10 @@ ggplot(gapminder, aes(lifeExp)) +
 
 From this plot, we can see the life expectancies center around 60 years of age.  
 But, we also notice the shape of this histogram is bimodal. So, this tells us that we're likely looking at two different groups (or more). 
-
-#### Separate plots  
+  
+  
+  
+#### Divide the groups, separate the data  
 Since we suspect we're looking at multiple groups from the bimodal distribution, let's separate the histrograms by one of the variables in our data set, continent.
 
 ```{r, warning = FALSE, message=FALSE, include = FALSE}
@@ -212,7 +278,7 @@ set_continent_color <- function(continent_names, lacroix_color, index_start) {
 ```
 
 ```{r, warning = FALSE, message=FALSE, fig.align="center"}
-#create a seperate data tabe calculating the mean and median of the data set
+#create a seperate data tabe calculating the mean and median of each continent
 measures_of_ct_by_continent <- gapminder %>% 
   group_by(continent) %>% 
   summarize(mean = mean(lifeExp), 
@@ -345,48 +411,38 @@ The below is code to produce a density plot.  Notice the y-axis is labelled "den
 ```{r, warning = FALSE}
 ggplot(gapminder, 
        aes(lifeExp, colour = continent)) +
-       geom_density()
+       geom_density() 
 ```
   
+  
+  
+
 ### Customizing your density plot  
 
-
+The below code shows you how to choose custom colors for each continent and split each plot. 
 ```{r}
+# Store colors you want for each continent
+density_plot_colors <- c( "Africa" = "#EA7580", 
+                          "Americas" = "#F6A1A5", 
+                          "Asia" = "#F8CD9C", 
+                          "Europe"= "#1BB6AF", 
+                          "Oceania" = "#088BBE")
 
+ggplot(gapminder, 
+       aes(lifeExp, fill = continent, colour = continent)) +
+       geom_density(alpha = 0.1) + 
+       scale_color_manual(values = density_plot_colors) + 
+       scale_fill_manual(values = density_plot_colors)  +
+       facet_wrap(~continent)
+
+                          
 ```
 
 
-```{r, warning=FALSE}
-# Build dataset with different distributions
-data <- data.frame(
-  type = c( rep("Edge Peak", 1000), 
-            rep("Comb", 1000), 
-            rep("Normal", 1000), 
-            rep("Uniform", 1000), 
-            rep("Bimodal", 1000), 
-            rep("Skewed", 1000) ),
-  value = c( rnorm(900), rep(3, 100), 
-             rnorm(360, sd=0.5), rep(c(-1,-0.75,-0.5,-0.25,0,0.25,0.5,0.75), 80), 
-             rnorm(1000), 
-             runif(1000), 
-             rnorm(500, mean=-2), rnorm(500, mean=2), 
-             abs(log(rnorm(1000))) )
-)
-
-# Represent it
-data %>%
-  ggplot( aes(x=value)) +
-    geom_density(fill="#69b3a2", color="#e9ecef", alpha=0.9, adjust = 0.5) +
-    facet_wrap(~type, scale="free") +
-    theme(
-      panel.spacing = unit(0.1, "lines"),
-      axis.title.x=element_blank(),
-      axis.text.x=element_blank(),
-      axis.ticks.x=element_blank()
-    )
-```
-
-## Common pitfalls  
+## Things to look out for   
++  **Minimize clutter and overlap**  
+   
+  
 
 
 *** 
@@ -396,5 +452,8 @@ data %>%
 Read more about different visualization types and how to build them from the following resources:  
 
 +  [Data to Viz](https://www.data-to-viz.com/)  
-    *From Data to Viz leads you to the most appropriate graph for your data. It links to the code to build it and lists common caveats you should avoid.*
+    *From Data to Viz leads you to the most appropriate graph for your data. It links to the code to build it and lists common caveats you should avoid.*  
+
+* [Smoothed Density Estimates - ggplot2](https://ggplot2.tidyverse.org/reference/geom_density.html)  
+*Documentation on how to use the `geom_density` and `stat_density` plotting functions for ggplot2*
 
